--- a/dashboard/src/scss/_variables.scss
+++ b/dashboard/src/scss/_variables.scss
@@ -1,13 +1,19 @@
+$info: #2196f3;
+$error: #d14343;
+$reserved-primary: #5048e5;
 $main-primary: #fff;
-$main-secondary: #10B981;
-$neutral-light: #9CA3AF;
+$main-secondary: #10b981;
+$neutral-light: #9ca3af;
 $neutral-dark: #111827;
 $text-primary: #111827;
-$text-secondary: #6B7280;
+$text-secondary: #6b7280;
+$transparent: #ffffff00;
+$lightest: #e6e8f0;
 
 $fz-s: 1.2rem;
 $fz-m: 1.4rem;
-$fz-l: 1.8rem;
+$fz-l: 1.6rem;
+$fz-xl: 1.8rem;
 
 $duration: 0.2s;
 
