--- a/dashboard/src/scss/components/_header.scss
+++ b/dashboard/src/scss/components/_header.scss
@@ -1,7 +1,8 @@
 .header {
   padding: 1.2rem 2.4rem;
   background-color: $main-primary;
-  box-shadow: 0px 2px 4px rgba(31, 41, 55, 0.06), 0px 4px 6px rgba(100, 116, 139, 0.12);
+  box-shadow: 0px 2px 4px rgba(31, 41, 55, 0.06),
+    0px 4px 6px rgba(100, 116, 139, 0.12);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,13 +12,17 @@
     @include icon(4rem, 4rem, $text-secondary);
     padding: 1rem;
   }
-  
+
+  &__avatar {
+    border-radius: 50%;
+  }
+
   &__nav {
     display: flex;
     & > * + * {
       margin-left: 1.6rem;
     }
-    
+
     a {
       @include icon(4rem, 4rem, $text-secondary);
       padding: 0.9rem;
