--- a/dashboard/src/scss/_reset.scss
+++ b/dashboard/src/scss/_reset.scss
@@ -29,3 +29,11 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+input,
+select,
+option,
+button,
+::placeholder {
+  font-family: inherit;
+}
