--- a/dashboard/src/scss/_variables.scss
+++ b/dashboard/src/scss/_variables.scss
@@ -8,7 +8,8 @@ $neutral-dark: #111827;
 $text-primary: #111827;
 $text-secondary: #6b7280;
 $transparent: #ffffff00;
-$lightest: #e6e8f0;
+$light: #e6e8f0;
+$lightest: #f3f4f6;
 
 $fz-s: 1.2rem;
 $fz-m: 1.4rem;
