--- a/dashboard/src/scss/components/_card.scss
+++ b/dashboard/src/scss/components/_card.scss
@@ -17,7 +17,7 @@
       font-size: $fz-m;
       color: $text-secondary;
     }
-    border-bottom: 0.1rem solid $lightest;
+    border-bottom: 0.1rem solid $light;
   }
   &__body {
     padding: 3.2rem 2.4rem;
@@ -27,9 +27,10 @@
     }
   }
   &__footer {
+    font-size: $fz-s;
     margin: 0;
     padding: 1.6rem;
-    border-top: 0.1rem solid $lightest;
+    border-top: 0.1rem solid $light;
     display: flex;
     align-items: center;
     justify-content: flex-end;
