--- a/dashboard/src/scss/main.scss
+++ b/dashboard/src/scss/main.scss
@@ -59,3 +59,4 @@
 @import './components/profile';
 @import './components/product';
 @import './components/pagination';
+@import './components/table';
