dashboard page partually

--- a/dashboard/src/scss/_variables.scss
+++ b/dashboard/src/scss/_variables.scss
@@ -1,5 +1,3 @@
-$info: #2196f3;
-$error: #d14343;
 $reserved-primary: #5048e5;
 $main-primary: #fff;
 $main-secondary: #10b981;
@@ -11,10 +9,20 @@ $transparent: #ffffff00;
 $light: #e6e8f0;
 $lightest: #f3f4f6;
 
+$blue: #1070ca;
+$yellow: #f7d154;
+$red: #ec4c47;
+
+$success: #14b8a6;
+$warning: #ffb020;
+$info: #2196f3;
+$error: #d14343;
+
 $fz-s: 1.2rem;
 $fz-m: 1.4rem;
 $fz-l: 1.6rem;
 $fz-xl: 1.8rem;
+$fz-xxl: 3.2rem;
 
 $duration: 0.2s;
 
