--- a/dashboard/src/scss/main.scss
+++ b/dashboard/src/scss/main.scss
@@ -60,3 +60,7 @@
 @import './components/product';
 @import './components/pagination';
 @import './components/table';
+@import './components/piechart';
+@import './components/traffic';
+@import './components/products-list';
+@import './components/statistic';
