--- a/dashboard/src/scss/index.scss
+++ b/dashboard/src/scss/index.scss
@@ -25,3 +25,5 @@
 @import './components/traffic';
 @import './components/products-list';
 @import './components/statistic';
+@import './components/chart';
+@import './components/footer';
