--- a/dashboard/src/scss/layout/_main.scss
+++ b/dashboard/src/scss/layout/_main.scss
@@ -1,13 +1,19 @@
 .main {
   overflow-y: auto;
+
   &__wrapper {
-    padding: 6.4rem 2.4rem;
-    max-width: 160rem;
+    padding: 6.4rem 2.4rem 2.4rem;
     margin: 0 auto;
+    max-width: 160rem;
 
     &--dashboard {
       padding: 2.4rem;
     }
+  }
+
+  &__footer {
+    max-width: 150rem;
+    width: 93%;
   }
 
   & > * + * {
