--- a/dashboard/src/views/account.html
+++ b/dashboard/src/views/account.html
@@ -19,6 +19,7 @@
                 card
                 main__grid-cell
                 main__grid-cell--small
+                main__grid-cell--account
                 main__grid-cell--align-top
               "
             >
@@ -40,7 +41,7 @@
                 </button>
               </div>
             </section>
-            <section class="card main__grid-cell main__grid-cell--medium">
+            <section class="card main__grid-cell main__grid-cell--medium main__grid-cell--account">
               <div class="card__header">
                 <h3>Card Header</h3>
               </div>
