--- a/dashboard/src/views/customers.html
+++ b/dashboard/src/views/customers.html
@@ -258,6 +258,8 @@
             </section>
           </div>
         </div>
+        <module href="/components/footer.html"></module>
+
       </main>
     </module>
     <script src="./bundle.js"></script>
