--- a/dashboard/src/views/index.html
+++ b/dashboard/src/views/index.html
@@ -109,9 +109,7 @@
                 </svg>
               </button>
             </div>
-            <div class="card__body">
-              <img src="./assets/images/bar-chart.svg" alt="" />
-            </div>
+            <module href="/components/chart.html"></module>
             <div class="card__footer card__footer--large">
               <a href="./customers.html" class="button button--secondary">
                 <span>View all</span>
@@ -322,7 +320,9 @@
                 </button>
               </div>
           </section>
+          
         </div>
+        <module href="/components/footer.html"></module>
       </main>
     </module>
     <script src="./bundle.js"></script>
