--- a/dashboard/src/scss/_reset.scss
+++ b/dashboard/src/scss/_reset.scss
@@ -1,6 +1,15 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  @media screen and (max-width: 30em) {
+    font-size: 50%;
+  }
+  @media screen and (max-width: 22em) {
+    font-size: 45%;
+  }
+  @media screen and (max-width: 20em) {
+    font-size: 40%;
+  }
 }
 
 *,
