--- a/dashboard/src/scss/components/_navigation.scss
+++ b/dashboard/src/scss/components/_navigation.scss
@@ -1,12 +1,19 @@
 .navigation {
   color: $neutral-light;
   width: $sidebar-mobule-width;
-  padding: 2.4rem 1.6rem;
   background: $neutral-dark;
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
+
+  display: flex;
+  flex-direction: column;
+
+  &__list {
+    padding: 2.4rem 1.6rem;
+    flex: 1;
+  }
 
   &__list-item + &__list-item {
     margin-top: 0.5rem;
@@ -48,6 +55,40 @@
 
     &__label {
       display: inline-block;
+    }
+  }
+
+  &__footer {
+    padding: 2.4rem 1.6rem;
+    border-top: 0.1rem solid rgba($light, 0.2);
+    display: flex;
+    flex-direction: column;
+  }
+  &__text {
+    &--primary {
+      font-weight: 500;
+      color: $main-primary;
+    }
+    &--secondary {
+      font-size: $fz-m;
+    }
+  }
+  &__button {
+    @include button($main-secondary);
+    display: flex;
+    align-items: center;
+    margin-top: 1.6rem;
+
+    svg {
+      margin-left: 1rem;
+      max-width: 1.8rem;
+      max-height: 1.8rem;
+      transform: translateY(10%);
+    }
+  }
+  @media screen and (max-width: 80em) {
+    &__footer {
+      display: none;
     }
   }
 }
