--- a/dashboard/src/scss/components/_piechart.scss
+++ b/dashboard/src/scss/components/_piechart.scss
@@ -4,8 +4,8 @@
   align-items: center;
 
   position: relative;
-  width: 24.4rem;
-  height: 24.4rem;
+  width: 18rem;
+  height: 18rem;
   border-radius: 50%;
   background-image: url('../assets/images/pie.svg');
 
@@ -19,8 +19,8 @@
     );
     &::after {
       content: '';
-      width: 20rem;
-      height: 20rem;
+      width: 85%;
+      height: 85%;
       background: $main-primary;
       border-radius: 50%;
       position: absolute;
