--- a/dashboard/src/scss/pages/_error.scss
+++ b/dashboard/src/scss/pages/_error.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 4rem 0;
   text-align: center;
   min-height: 100vh;
