--- a/dashboard/src/views/components/header.html
+++ b/dashboard/src/views/components/header.html
@@ -10,7 +10,7 @@
   </button>
 
   <nav class="header__nav">
-    <a href="#">
+    <a href="./customers.html">
       <svg
         preserveAspectRatio="xMinYMin meet"
         viewBox="0 0 22 22"
@@ -29,7 +29,7 @@
         <use href="/images/icons.svg#notification"></use>
       </svg>
     </a>
-    <a href="#">
+    <a href="./account.html">
       <img
         class="header__avatar"
         src="/images/Avatar.jpg"
