--- a/dashboard/src/views/components/navigation.html
+++ b/dashboard/src/views/components/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navigation">
   <ul class="navigation__list">
     <li class="navigation__list-item">
-      <a href="./index.html" class="navigation__link">
+      <a href="./index.html"  class="navigation__link" id="dashboard">
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -15,7 +15,7 @@
       </a>
     </li>
     <li class="navigation__list-item">
-      <a href="./customers.html" class="navigation__link">
+      <a href="./customers.html" class="navigation__link" id="customers">
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -29,7 +29,7 @@
       </a>
     </li>
     <li class="navigation__list-item">
-      <a href="./products.html" class="navigation__link">
+      <a href="./products.html" class="navigation__link" id="products">
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -43,7 +43,7 @@
       >
     </li>
     <li class="navigation__list-item">
-      <a href="./account.html" class="navigation__link navigation__link">
+      <a href="./account.html" class="navigation__link" id="account">
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -57,7 +57,7 @@
       >
     </li>
     <li class="navigation__list-item">
-      <a href="./settings.html" class="navigation__link">
+      <a href="./settings.html" class="navigation__link" id="settings">
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -71,7 +71,7 @@
       >
     </li>
     <li class="navigation__list-item">
-      <a href="./login.html" class="navigation__link">
+      <a href="./login.html" class="navigation__link" id="login">
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -85,7 +85,7 @@
       >
     </li>
     <li class="navigation__list-item">
-      <a href="./register.html" class="navigation__link">
+      <a href="./register.html" class="navigation__link" id="register">
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -99,7 +99,7 @@
       >
     </li>
     <li class="navigation__list-item">
-      <a href="./error.html" class="navigation__link">
+      <a href="./error.html" class="navigation__link" id='error'>
         <span class="navigation__icon">
           <svg
             preserveAspectRatio="xMinYMin meet"
@@ -113,4 +113,20 @@
       >
     </li>
   </ul>
+  <div class="navigation__footer">
+    <p class="navigation__text navigation__text--primary">Need more features?</p>
+    <p class="navigation__text navigation__text--secondary">Check out our Pro solution.</p>
+    <a href="#" class="navigation__button">
+      <span>Buy pro</span>
+      <span>
+        <svg
+          preserveAspectRatio="xMinYMin meet"
+          viewBox="0 0 18 15"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <use href="/images/icons.svg#link"></use>
+        </svg>
+      </span>
+    </a>
+  </div>
 </nav>
