--- a/dashboard/src/scss/components/_footer.scss
+++ b/dashboard/src/scss/components/_footer.scss
@@ -2,7 +2,9 @@
   font-size: $fz-m;
   padding: 0.8rem 0 2.4rem;
   border-top: 0.1rem solid #e6e8f0;
-  margin: 0.8rem auto 0;
+  margin: 2.4rem auto 0;
+  max-width: 150rem;
+  width: 95%;
 
   & > * + * {
     margin-top: 0.8rem;
