--- a/dashboard/src/scss/components/_product.scss
+++ b/dashboard/src/scss/components/_product.scss
@@ -18,22 +18,15 @@
     justify-content: space-between;
     flex-wrap: wrap;
 
-    @media screen and (max-width: 30em) {
-      p {
-        flex-basis: 15rem;
-        flex-grow: 1;
-        justify-content: center;
-      }
-      & > * + * {
-        padding-top: 0.5rem;
-      }
-    }
-
     p {
       font-size: $fz-m;
       color: $text-secondary;
       display: flex;
       align-items: center;
+
+      @media screen and (max-width: 55em) {
+        font-size: $fz-s;
+      }
 
       svg {
         fill: $text-secondary;
