--- a/stacking/src/scss/index.scss
+++ b/stacking/src/scss/index.scss
@@ -26,14 +26,6 @@ body {
   flex-direction: column;
   align-items: center;
   background-image: radial-gradient(circle, #5c0067 0%, #00d4ff 100%);
-
-  // linear-gradient(
-  //   to bottom,
-  //   #fcf431,
-  //   #fcfcfc,
-  //   #9d59d2,
-  //   #282828
-  // );
 }
 
 .app {
@@ -50,6 +42,12 @@ body {
 
   & > * + * {
     margin-top: 1rem;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   &__message {
